--- a/index.html
+++ b/index.html
@@ -1,1 +1,49 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>JavaScript Fundamentals Assignment</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <header>
+    <h1 id="title">Mastering JavaScript Fundamentals</h1>
+    <p>Open your console to see some outputs</p>
+  </header>
+
+  <main>
+    <section>
+      <h2>Part 1: Basics</h2>
+      <button onclick="checkAge()">Check Age</button>
+    </section>
+
+    <section>
+      <h2>Part 2: Functions</h2>
+      <button onclick="calculateTotal(3, 200)">Calculate Total</button>
+      <button onclick="toggleMessage()">Toggle Message</button>
+      <p id="message" style="display:none;">Hello, JavaScript Functions!</p>
+    </section>
+
+    <section>
+      <h2>Part 3: Loops</h2>
+      <button onclick="countdown(5)">Start Countdown</button>
+      <ul id="loop-list"></ul>
+    </section>
+
+    <section>
+      <h2>Part 4: DOM Manipulation</h2>
+      <button id="colorBtn">Change Title Color</button>
+      <button id="addItemBtn">Add Item</button>
+      <ul id="dynamic-list"></ul>
+    </section>
+  </main>
+
+  <footer>
+    <p>Made with JavaScript</p>
+  </footer>
+
+  <script src="script.js"></script>
+</body>
+</html>
 
